--- a/src/app/localizations/en.json
+++ b/src/app/localizations/en.json
@@ -181,6 +181,7 @@
     "SAMPLE_TEXT_key_quickintro_toc": "Toc",
     "CHARACTER_Cat.svg": "Cat",
     "CHARACTER_Cat2.svg": "Cat Walking",
+    "CHARACTER_ScratchCat.svg": "Scratch Cat",
     "CHARACTER_Blue.svg": "Tic",
     "CHARACTER_Purple.svg": "Tac",
     "CHARACTER_Red.svg": "Toc",
