Добавление поддержки форматов проектов SJR и ALGO, улучшение обработки сохранения проектов, обновление интерфейса для выбора формата проекта.

--- a/src/app/localizations/en.json
+++ b/src/app/localizations/en.json
@@ -372,6 +372,7 @@
     "ALERT_BACK": "Back",
     "ALERT_SAVING": "Saving...",
     "SELECT_LANGUAGE": "Select language",
+    "SELECT_PROJECT_EXTENSION": "Project extension",
     "USAGE_QUESTION": "Where are you using ScratchJr?",
     "USAGE_SCHOOL": "School",
     "USAGE_HOME": "Home",
